Fixed text overlap bug

--- a/src/index.css
+++ b/src/index.css
@@ -26088,6 +26088,9 @@ div.ant-typography-edit-content.ant-typography-rtl {
 .muli {
   font-family: Muli, Roboto, Muli SemiBold, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
+.fs-17px {
+  font-size: 17px;
+}
 .fs-18px {
   font-size: 18px;
 }
